--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,7 +19,7 @@ body {
 }
 #overlay{
     position: absolute;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     top: 0;
@@ -140,14 +140,36 @@ nav>ul>li>a:hover{
     font-size: 2rem;
 }
 .aboutSec{
-    background-color: aqua;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .image{
-
-    background-color: brown;
     flex-basis: 60%;
+}
+.flex-items{
+   /* background-color: #A01E3F; */
+   width: 600px;
+   display: flex;
+   justify-content: space-between;
+   height: 15vh;
+    
+
+}
+.flex-1{
+    align-self: flex-start;
+
+}
+.flex-2{
+    align-self: center;
+}
+.flex-3{
+    align-self: flex-end;
+}
+.aboutSec button{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
