--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -189,6 +189,7 @@ nav>ul>li>a:hover{
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
+    margin-bottom: 100px;
 }
 .cards{
    
@@ -199,4 +200,22 @@ nav>ul>li>a:hover{
 .arrows{
     align-self: flex-start;
     margin: 50px 10px 0px;
+}
+
+/* SERVICES */
+.services{
+    margin-top: px;
+    width: 70%;
+    margin:auto ;
+    height: 50vh;
+    background-image: url('../images/serv.jpg') ;
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+}
+.overlay{
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 2;
 }
