--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,7 @@ body {
     box-sizing: border-box;
     background-color: #F3F1EF;
     font-family: 'Arima';
+    
 }
 .container{
     height: 100vh;
@@ -18,7 +19,7 @@ body {
     background-repeat: no-repeat;
 }
 #overlay{
-    position: absolute;
+   
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -85,7 +86,7 @@ nav>ul>li>a:hover{
 /* HOME */
 
 .homeSec{
-    height: 80vh ;
+    height: 70vh ;
     width: 700px;
     margin: auto;
     color: #fff;
@@ -116,7 +117,7 @@ nav>ul>li>a:hover{
     font-size: 2rem;
 }
 .homeSec p{
-    font-size: 1.4rem;
+    font-size: rem;
     margin-bottom: 40px;
 }
 .homeSec button{
